# itat-scraper

./: .dockerignore  .gitignore  .probe_state.json  ARCHITECTURE.md  DISTRIBUTED_PLAN.md  Dockerfile  USAGE.md  docker-compose.yml  main.py  pyproject.toml  rate_limit_test.py  run_probe_loop.sh  tui.py
dashboard/: app.py
frontend/src/: App.jsx  index.css
frontend/src/hooks/: useWebSocket.js
itat_scraper/: __init__.py  captcha.py  constants.py  models.py  ratelimit.py  reporter.py  runner.py  scraper.py  storage.py
migrations/: 001_init.sql
web/: app.py  state.py
